qt/gen_qboxlayout.h

class QBoxLayout;
class QLayout;
class QLayoutItem;
class QMetaObject;
class QRect;
class QSize;
class QSpacerItem;
class QWidget;
typedef struct QBoxLayout QBoxLayout;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QLayout QLayout;
typedef struct QLayoutItem QLayoutItem;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QSpacerItem QSpacerItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVBoxLayout QVBoxLayout;
typedef struct QWidget QWidget;
bool QVBoxLayout_override_virtual_minimumHeightForWidth(void* self, intptr_t slot);
bool QVBoxLayout_override_virtual_expandingDirections(void* self, intptr_t slot);
int QVBoxLayout_virtualbase_expandingDirections(const void* self);
bool QVBoxLayout_override_virtual_invalidate(void* self, intptr_t slot);
void QVBoxLayout_virtualbase_invalidate(void* self);
bool QVBoxLayout_override_virtual_itemAt(void* self, intptr_t slot);
QLayoutItem* QVBoxLayout_virtualbase_itemAt(const void* self, int param1);
bool QVBoxLayout_override_virtual_takeAt(void* self, intptr_t slot);
QLayoutItem* QVBoxLayout_virtualbase_takeAt(void* self, int param1);
bool QVBoxLayout_override_virtual_count(void* self, intptr_t slot);
int QVBoxLayout_virtualbase_count(const void* self);
bool QVBoxLayout_override_virtual_setGeometry(void* self, intptr_t slot);
void QVBoxLayout_virtualbase_setGeometry(void* self, QRect* geometry);
bool QVBoxLayout_override_virtual_geometry(void* self, intptr_t slot);
QRect* QVBoxLayout_virtualbase_geometry(const void* self);
bool QVBoxLayout_override_virtual_indexOf(void* self, intptr_t slot);
int QVBoxLayout_virtualbase_indexOf(const void* self, QWidget* param1);
bool QVBoxLayout_override_virtual_isEmpty(void* self, intptr_t slot);
bool QVBoxLayout_virtualbase_isEmpty(const void* self);
bool QVBoxLayout_override_virtual_controlTypes(void* self, intptr_t slot);
int QVBoxLayout_virtualbase_controlTypes(const void* self);
bool QVBoxLayout_override_virtual_layout(void* self, intptr_t slot);
QLayout* QVBoxLayout_virtualbase_layout(void* self);
bool QVBoxLayout_override_virtual_childEvent(void* self, intptr_t slot);
void QVBoxLayout_virtualbase_childEvent(void* self, QChildEvent* e);
bool QVBoxLayout_override_virtual_event(void* self, intptr_t slot);
bool QVBoxLayout_virtualbase_event(void* self, QEvent* event);
bool QVBoxLayout_override_virtual_eventFilter(void* self, intptr_t slot);
bool QVBoxLayout_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QVBoxLayout_override_virtual_timerEvent(void* self, intptr_t slot);
void QVBoxLayout_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QVBoxLayout_override_virtual_customEvent(void* self, intptr_t slot);
void QVBoxLayout_virtualbase_customEvent(void* self, QEvent* event);
bool QVBoxLayout_override_virtual_connectNotify(void* self, intptr_t slot);
void QVBoxLayout_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QVBoxLayout_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QVBoxLayout_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
bool QVBoxLayout_override_virtual_widget(void* self, intptr_t slot);
QWidget* QVBoxLayout_virtualbase_widget(void* self);
bool QVBoxLayout_override_virtual_spacerItem(void* self, intptr_t slot);
QSpacerItem* QVBoxLayout_virtualbase_spacerItem(void* self);
void QVBoxLayout_delete(QVBoxLayout* self);