qt/gen_qboxlayout.nim

proc fcQVBoxLayout_override_virtual_minimumHeightForWidth(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_minimumHeightForWidth".}
proc fQVBoxLayout_virtualbase_expandingDirections(self: pointer, ): cint{.importc: "QVBoxLayout_virtualbase_expandingDirections".}
proc fcQVBoxLayout_override_virtual_expandingDirections(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_expandingDirections".}
proc fQVBoxLayout_virtualbase_invalidate(self: pointer, ): void{.importc: "QVBoxLayout_virtualbase_invalidate".}
proc fcQVBoxLayout_override_virtual_invalidate(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_invalidate".}
proc fQVBoxLayout_virtualbase_itemAt(self: pointer, param1: cint): pointer{.importc: "QVBoxLayout_virtualbase_itemAt".}
proc fcQVBoxLayout_override_virtual_itemAt(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_itemAt".}
proc fQVBoxLayout_virtualbase_takeAt(self: pointer, param1: cint): pointer{.importc: "QVBoxLayout_virtualbase_takeAt".}
proc fcQVBoxLayout_override_virtual_takeAt(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_takeAt".}
proc fQVBoxLayout_virtualbase_count(self: pointer, ): cint{.importc: "QVBoxLayout_virtualbase_count".}
proc fcQVBoxLayout_override_virtual_count(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_count".}
proc fQVBoxLayout_virtualbase_setGeometry(self: pointer, geometry: pointer): void{.importc: "QVBoxLayout_virtualbase_setGeometry".}
proc fcQVBoxLayout_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_setGeometry".}
proc fQVBoxLayout_virtualbase_geometry(self: pointer, ): pointer{.importc: "QVBoxLayout_virtualbase_geometry".}
proc fcQVBoxLayout_override_virtual_geometry(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_geometry".}
proc fQVBoxLayout_virtualbase_indexOf(self: pointer, param1: pointer): cint{.importc: "QVBoxLayout_virtualbase_indexOf".}
proc fcQVBoxLayout_override_virtual_indexOf(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_indexOf".}
proc fQVBoxLayout_virtualbase_isEmpty(self: pointer, ): bool{.importc: "QVBoxLayout_virtualbase_isEmpty".}
proc fcQVBoxLayout_override_virtual_isEmpty(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_isEmpty".}
proc fQVBoxLayout_virtualbase_controlTypes(self: pointer, ): cint{.importc: "QVBoxLayout_virtualbase_controlTypes".}
proc fcQVBoxLayout_override_virtual_controlTypes(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_controlTypes".}
proc fQVBoxLayout_virtualbase_layout(self: pointer, ): pointer{.importc: "QVBoxLayout_virtualbase_layout".}
proc fcQVBoxLayout_override_virtual_layout(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_layout".}
proc fQVBoxLayout_virtualbase_childEvent(self: pointer, e: pointer): void{.importc: "QVBoxLayout_virtualbase_childEvent".}
proc fcQVBoxLayout_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_childEvent".}
proc fQVBoxLayout_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QVBoxLayout_virtualbase_event".}
proc fcQVBoxLayout_override_virtual_event(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_event".}
proc fQVBoxLayout_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QVBoxLayout_virtualbase_eventFilter".}
proc fcQVBoxLayout_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_eventFilter".}
proc fQVBoxLayout_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QVBoxLayout_virtualbase_timerEvent".}
proc fcQVBoxLayout_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_timerEvent".}
proc fQVBoxLayout_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QVBoxLayout_virtualbase_customEvent".}
proc fcQVBoxLayout_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_customEvent".}
proc fQVBoxLayout_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QVBoxLayout_virtualbase_connectNotify".}
proc fcQVBoxLayout_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_connectNotify".}
proc fQVBoxLayout_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QVBoxLayout_virtualbase_disconnectNotify".}
proc fcQVBoxLayout_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_disconnectNotify".}
proc fQVBoxLayout_virtualbase_widget(self: pointer, ): pointer{.importc: "QVBoxLayout_virtualbase_widget".}
proc fcQVBoxLayout_override_virtual_widget(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_widget".}
proc fQVBoxLayout_virtualbase_spacerItem(self: pointer, ): pointer{.importc: "QVBoxLayout_virtualbase_spacerItem".}
proc fcQVBoxLayout_override_virtual_spacerItem(self: pointer, slot: int) {.importc: "QVBoxLayout_override_virtual_spacerItem".}
proc fcQVBoxLayout_delete(self: pointer) {.importc: "QVBoxLayout_delete".}


func init*(T: type QBoxLayout, h: ptr cQBoxLayout): QBoxLayout =
  T(h: h)
proc create*(T: type QBoxLayout, param1: QBoxLayoutDirection): QBoxLayout =

  QBoxLayout.init(fcQBoxLayout_new(cint(param1)))
proc create*(T: type QBoxLayout, param1: QBoxLayoutDirection, parent: gen_qwidget.QWidget): QBoxLayout =

  QBoxLayout.init(fcQBoxLayout_new2(cint(param1), parent.h))
proc metaObject*(self: QBoxLayout, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQBoxLayout_metaObject(self.h))

proc metacast*(self: QBoxLayout, param1: cstring): pointer =

  fcQBoxLayout_metacast(self.h, param1)

proc metacall*(self: QBoxLayout, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQBoxLayout_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QBoxLayout, s: cstring): string =

  let v_ms = fcQBoxLayout_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QBoxLayout, s: cstring): string =

  let v_ms = fcQBoxLayout_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc direction*(self: QBoxLayout, ): QBoxLayoutDirection =

  QBoxLayoutDirection(fcQBoxLayout_direction(self.h))

proc setDirection*(self: QBoxLayout, direction: QBoxLayoutDirection): void =

  fcQBoxLayout_setDirection(self.h, cint(direction))

proc addSpacing*(self: QBoxLayout, size: cint): void =

  fcQBoxLayout_addSpacing(self.h, size)

proc addStretch*(self: QBoxLayout, ): void =

  fcQBoxLayout_addStretch(self.h)

proc addSpacerItem*(self: QBoxLayout, spacerItem: gen_qlayoutitem.QSpacerItem): void =

  fcQBoxLayout_addSpacerItem(self.h, spacerItem.h)

proc addWidget*(self: QBoxLayout, param1: gen_qwidget.QWidget): void =

  fcQBoxLayout_addWidget(self.h, param1.h)

proc addLayout*(self: QBoxLayout, layout: gen_qlayout.QLayout): void =

  fcQBoxLayout_addLayout(self.h, layout.h)

proc addStrut*(self: QBoxLayout, param1: cint): void =

  fcQBoxLayout_addStrut(self.h, param1)

proc addItem*(self: QBoxLayout, param1: gen_qlayoutitem.QLayoutItem): void =

  fcQBoxLayout_addItem(self.h, param1.h)

proc insertSpacing*(self: QBoxLayout, index: cint, size: cint): void =

  fcQBoxLayout_insertSpacing(self.h, index, size)

proc insertStretch*(self: QBoxLayout, index: cint): void =

  fcQBoxLayout_insertStretch(self.h, index)

proc insertSpacerItem*(self: QBoxLayout, index: cint, spacerItem: gen_qlayoutitem.QSpacerItem): void =

  fcQBoxLayout_insertSpacerItem(self.h, index, spacerItem.h)

proc insertWidget*(self: QBoxLayout, index: cint, widget: gen_qwidget.QWidget): void =

  fcQBoxLayout_insertWidget(self.h, index, widget.h)

proc insertLayout*(self: QBoxLayout, index: cint, layout: gen_qlayout.QLayout): void =

  fcQBoxLayout_insertLayout(self.h, index, layout.h)

proc insertItem*(self: QBoxLayout, index: cint, param2: gen_qlayoutitem.QLayoutItem): void =

  fcQBoxLayout_insertItem(self.h, index, param2.h)

proc spacing*(self: QBoxLayout, ): cint =

  fcQBoxLayout_spacing(self.h)

proc setSpacing*(self: QBoxLayout, spacing: cint): void =

  fcQBoxLayout_setSpacing(self.h, spacing)

proc setStretchFactor*(self: QBoxLayout, w: gen_qwidget.QWidget, stretch: cint): bool =

  fcQBoxLayout_setStretchFactor(self.h, w.h, stretch)

proc setStretchFactor2*(self: QBoxLayout, l: gen_qlayout.QLayout, stretch: cint): bool =

  fcQBoxLayout_setStretchFactor2(self.h, l.h, stretch)

proc setStretch*(self: QBoxLayout, index: cint, stretch: cint): void =

  fcQBoxLayout_setStretch(self.h, index, stretch)

proc stretch*(self: QBoxLayout, index: cint): cint =

  fcQBoxLayout_stretch(self.h, index)

proc sizeHint*(self: QBoxLayout, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQBoxLayout_sizeHint(self.h))

proc minimumSize*(self: QBoxLayout, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQBoxLayout_minimumSize(self.h))

proc maximumSize*(self: QBoxLayout, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQBoxLayout_maximumSize(self.h))

proc hasHeightForWidth*(self: QBoxLayout, ): bool =

  fcQBoxLayout_hasHeightForWidth(self.h)

proc heightForWidth*(self: QBoxLayout, param1: cint): cint =

  fcQBoxLayout_heightForWidth(self.h, param1)

proc minimumHeightForWidth*(self: QBoxLayout, param1: cint): cint =

  fcQBoxLayout_minimumHeightForWidth(self.h, param1)

proc expandingDirections*(self: QBoxLayout, ): gen_qnamespace.Orientation =

  gen_qnamespace.Orientation(fcQBoxLayout_expandingDirections(self.h))

proc invalidate*(self: QBoxLayout, ): void =

  fcQBoxLayout_invalidate(self.h)

proc itemAt*(self: QBoxLayout, param1: cint): gen_qlayoutitem.QLayoutItem =

  gen_qlayoutitem.QLayoutItem(h: fcQBoxLayout_itemAt(self.h, param1))

proc takeAt*(self: QBoxLayout, param1: cint): gen_qlayoutitem.QLayoutItem =

  gen_qlayoutitem.QLayoutItem(h: fcQBoxLayout_takeAt(self.h, param1))

proc count*(self: QBoxLayout, ): cint =

  fcQBoxLayout_count(self.h)

proc setGeometry*(self: QBoxLayout, geometry: gen_qrect.QRect): void =

  fcQBoxLayout_setGeometry(self.h, geometry.h)

proc tr2*(_: type QBoxLayout, s: cstring, c: cstring): string =

  let v_ms = fcQBoxLayout_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QBoxLayout, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQBoxLayout_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf82*(_: type QBoxLayout, s: cstring, c: cstring): string =

  let v_ms = fcQBoxLayout_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf83*(_: type QBoxLayout, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQBoxLayout_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc addStretch1*(self: QBoxLayout, stretch: cint): void =

  fcQBoxLayout_addStretch1(self.h, stretch)

proc addWidget2*(self: QBoxLayout, param1: gen_qwidget.QWidget, stretch: cint): void =

  fcQBoxLayout_addWidget2(self.h, param1.h, stretch)

proc addWidget3*(self: QBoxLayout, param1: gen_qwidget.QWidget, stretch: cint, alignment: gen_qnamespace.AlignmentFlag): void =

  fcQBoxLayout_addWidget3(self.h, param1.h, stretch, cint(alignment))

proc addLayout2*(self: QBoxLayout, layout: gen_qlayout.QLayout, stretch: cint): void =

  fcQBoxLayout_addLayout2(self.h, layout.h, stretch)

proc insertStretch2*(self: QBoxLayout, index: cint, stretch: cint): void =

  fcQBoxLayout_insertStretch2(self.h, index, stretch)

proc insertWidget3*(self: QBoxLayout, index: cint, widget: gen_qwidget.QWidget, stretch: cint): void =
